and final again...

--- a/index.html
+++ b/index.html
@@ -1657,7 +1657,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">John<br>Karantonis</h5>
                 <h6 class="subscript-center pb-3">5th Ave Showroom Manager, Head of Custom Made services USA</h6>
-                <p class="card-text">John has over 30 years of experience in fabric and textile interior services. From 1979 to 1997 he worked for "Paterson Silks" and then he joined "Beckensteins", where new challenges gave him a huge amount of experience in his field. Since August 2017 he has been working at Togas. He delivers world-class custom service and attention to detail for every project at hand.</p>
+                <p class="card-text">John has over 30 years of experience in Fabric and Textile Interior Services. At Togas, he currently delivers world-class custom service and attention to detail for every project at hand.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -1680,7 +1680,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Anna<br>Zezyulya</h5>
                 <h6 class="subscript-center pb-3">Regional Manager</h6>
-                <p class="card-text">Anna has a great passion for her job! She has been working in home textiles for 18 years as a master of decorative needlework. She is specialized in embroidering curtain tiebacks, bandeaus and lambrequins. After finishing two Universities in Designing, she has worked both as a buyer and a textile designer. She has furthermore collaborated with high-class restaurants and hotels.</p>
+                <p class="card-text">Anna has 18 years' experience in home textiles. She is specialized in embroidering curtain tiebacks, bandeaus and lambrequins. She has also collaborated with high-class restaurants and hotels. </p>
             </div>
         </div>
         <!--/.Card-->
@@ -1702,7 +1702,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Tzanis<br>Sifnaios</h5>
                 <h6 class="subscript-center pb-3">Architectural Design Director</h6>
-                <p class="card-text">Tzannis studied Graphics & Design and has been working for over 30 years in his field. He initially worked as an Art Director in leading Greek magazines while he has been working at Togas for the last five years. He is one of Togas’ primary curators and many designs are influenced by his approach and aesthetics. He believes that quality and attention to detail are crucial for building a luxury brand.</p>
+                <p class="card-text">Tzannis has over 30 years of experience. He is one of Togas’ primary curators and many designs are influenced by his approach. He believes that quality and attention to detail are crucial for building a luxury brand.</p>
             </div>
         </div>
         <!--/.Card-->		
@@ -1724,7 +1724,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Christina<br>Psallida</h5>
                 <h6 class="subscript-center pb-3">showroom manager</h6>
-                <p class="card-text">Christina has been working in white goods since 2000. Her experience is mostly centered around office administration as well as drapery and white goods production. She now works in Retail in the Couture and White Goods department. Her love for fabrics and interior design always drive her in a continuous strive for unique spaces and happy clients.</p>
+                <p class="card-text">Christina works at Togas in the Couture and Fine Linens department. Her love for fabrics and interior design always drive her in a non-stop strive for unique interiors and happy clients.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -1747,7 +1747,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Tony<br>Karantonis</h5>
                 <h6 class="subscript-center pb-3">Showroom Manager Roosevelt Field Mall</h6>
-                <p class="card-text">Tony brings at Togas 30 years of experience in custom-made window treatments, upholstery, bedding and furniture. For years, he has been working with top designers in New York City delivering high-quality workmanship for all their projects. Entrusting Tony to create a custom home product, one can be confident to receive a unique tailored look that will appeal to an eclectic style.</p>
+                <p class="card-text">Tony brings 30 years of experience in custom-made window treatments, upholstery, bedding and furniture. Entrusting him, one can be confident to receive a tailored look that will suit any eclectic style.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -1771,7 +1771,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Anna<br>Korobko</h5>
                 <h6 class="subscript-center pb-3">Senior Designer</h6>
-                <p class="card-text">Anna began her career at Starik Hottabich at the age of 19; she soon became a leading designer of the company. She kept that position for 8 years and left when the company closed down. Since 2013 she has been working at Togas, as a designer at the leading.</p>
+                <p class="card-text">Anna is currently employed at Togas in the position of Designer at the Sadovaya-Sukharevskaya St.  boutique. She feels that premium custom service brings a higher value to the company.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -1791,7 +1791,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Lila<br>Khayrova</h5>
                 <h6 class="subscript-center pb-3">Senior Designer</h6>
-                <p class="card-text">After Lila got her degree in Consumer Goods specialized as a “designer-constructor of women’s clothes”, she studied Fashion Design. She now works as a designer for the “Sadovaya-Sukharevskaya” boutique. She believes that working at Togas gives her the opportunity of professional growth, as she participates in challenging projects, as well as the chance to meet and communicate with outstanding people. </p>
+                <p class="card-text">Lila is employed at the “Sadovaya-Sukharevskaya” boutique as a Designer. Working for Togas gives her the opportunity to grow professionally as well as the chance to interact with outstanding people.</p>
             </div>
         </div>       
         <!--/.Card-->
@@ -1813,7 +1813,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Victoria<br>Ivanova</h5>
                 <h6 class="subscript-center pb-3">Senior Designer</h6>
-                <p class="card-text">Born and raised in Moscow, Victoria got her degree in Decoration of Textiles while also studied at the Art School. She has been working in the Design and Interior field for the last 15 years. She loves getting involved in exciting design projects and furniture.</p>
+                <p class="card-text">Victoria has been working in Interior Design for the last 15 years. She enjoys getting involved in exciting projects as well as finding constructive ways in order to solve complex, yet creative problems.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -1834,7 +1834,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Svetlana<br>Varlamova</h5>
                 <h6 class="subscript-center pb-3">Head of Custom Made Services UAE</h6>
-                <p class="card-text">Svetlana works at Togas since 2009. For the last two years, she is the leading specialist in Textual Interior Design at the new boutique in Dubai. Creative thinking and a different outlook on everyday things are what makes a difference, according to her. She believes that every client is unique and that he should be treated separately according to his own needs.</p>
+                <p class="card-text">Svetlana is a current Specialist in Textual Interior Design at the new boutique in Dubai. According to her, creative thinking and a different outlook on everyday things are what makes a difference.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -1901,7 +1901,7 @@
 
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 mt-4">
-                    <p class="text-center card-text mb-5">We stand high in the global textile industry providing an outstanding custom-made service in 140 stores worldwide. We now operate three exclusive boutiques in the US, one in Greenwich CT, one in Manhattan NY and another one in Roosevelt Field Mall. Visit the stores, discover our premium service and get the chance to see in close our highest quality standards delivered with love, care and passion. Togas boutiques are a unique holistic experience that will help you get closer to your dream.</p>
+                    <p class="text-center card-text mb-5">We stand high in the global textile industry providing an outstanding custom-made service in 140 stores worldwide. We are now proud to operate three exclusive boutiques across the US. Visit our stores in Greenwich, Manhattan or Roosevelt Field Mall, discover our premium service and get the chance to see in close our highest quality standards delivered with love, care and passion. Togas boutiques are a unique holistic experience that will help you get closer to your dream.</p>
                 </div>
             </div>
 
