--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </li>
                        
                     <li class="nav-item">
-                        <a class="nav-link" href="#ready-made">ready-made</a>
+                        <a class="nav-link" href="#ready-made">bed and bath</a>
                     </li>
                 </ul>
             </div>
@@ -2117,7 +2117,7 @@
         <div class="container-fluid bg-grey mt-5 pt-5 pb-4">
             <div class="container pt-4">
                 <div class="row justify-content-center text-center">
-                    <h2 class="section-title h2-responsive">Ready-made</h2>
+                    <h2 class="section-title h2-responsive">bed and bath</h2>
                 </div>
 
                 <!-- SUBSCRIPT -->
