--- a/index.html
+++ b/index.html
@@ -1900,7 +1900,7 @@
 
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 mt-4">
-                    <p class="text-center card-text mb-5">We stand high in the global textile industry providing an outstanding custom-made service in 140 stores worldwide. We are now proud to operate three exclusive boutiques across the US. Visit our stores in Greenwich, Manhattan or Roosevelt Field Mall, discover our premium service and get the chance to see in close our highest quality standards delivered with love, care and passion. Togas boutiques are a unique holistic experience that will help you get closer to your dream.</p>
+                    <p class="text-center card-text mb-5">We stand high in the global textile industry providing an outstanding custom-made service in 140 stores worldwide. We are now proud to operate three exclusive boutiques across the US. Visit our stores in Greenwich, Manhattan or Roosevelt Field Mall, discover our premium service and get the chance to see in close our highest quality standards delivered with love, care and passion. Togas boutiques are a unique holistic experience that will help you get<br />closer to your dream.</p>
                 </div>
             </div>
 
