--- a/index.html
+++ b/index.html
@@ -1661,6 +1661,50 @@
         </div>
         <!--/.Card-->
 		
+        <!--Card-->
+        <!--Card image-->
+        <div class="expert-item text-center">
+            <div class="view overlay">
+                <img src="img/img-togas-lp3/experts%20(13).jpg" alt="Elena Jeffrey" class="card-img-top-tg img-fluid rounded-circle">
+                <a>
+                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
+                        <p class="white-text">Elena<br>Jeffrey</p>
+                    </div>
+                </a>
+            </div>
+
+            <!--Card content-->
+            <div class="card-body">
+                <!--Title-->
+                <h5 class="experts-name my-3">Elena<br>Jeffrey</h5>
+                <h6 class="subscript-center pb-3">Director of the Togas Research and Development Office</h6>
+                <p class="card-text">Elena is responsible for the production outcome at Togas. Meeting diverse people, dealing with creative projects while building relationships based on talent and personal ethics are the essence of her work.</p>
+            </div>
+        </div>
+        <!--/.Card-->
+
+		
+		<!--Card-->
+        <!--Card image-->
+        <div class="expert-item text-center">
+            <div class="view overlay">
+                <img src="img/img-togas-lp3/experts%20(7).jpg" alt="Tzanis Sifnaios" class="card-img-top-tg img-fluid rounded-circle">
+                <a>
+                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
+                        <p class="white-text">Tzanis<br>Sifnaios</p>
+                    </div>
+                </a>
+            </div>
+
+            <!--Card content-->
+            <div class="card-body">
+                <!--Title-->
+                <h5 class="experts-name my-3">Tzanis<br>Sifnaios</h5>
+                <h6 class="subscript-center pb-3">Architectural Design Director</h6>
+                <p class="card-text">Tzannis has over 30 years of experience. He is one of Togas’ primary curators and many designs are influenced by his approach. He believes that quality and attention to detail are crucial for building a luxury brand.</p>
+            </div>
+        </div>
+        <!--/.Card-->	
 
 		
 		<!--Card-->
@@ -1683,28 +1727,7 @@
             </div>
         </div>
         <!--/.Card-->
-		
-		<!--Card-->
-        <!--Card image-->
-        <div class="expert-item text-center">
-            <div class="view overlay">
-                <img src="img/img-togas-lp3/experts%20(7).jpg" alt="Tzanis Sifnaios" class="card-img-top-tg img-fluid rounded-circle">
-                <a>
-                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
-                        <p class="white-text">Tzanis<br>Sifnaios</p>
-                    </div>
-                </a>
-            </div>
-
-            <!--Card content-->
-            <div class="card-body">
-                <!--Title-->
-                <h5 class="experts-name my-3">Tzanis<br>Sifnaios</h5>
-                <h6 class="subscript-center pb-3">Architectural Design Director</h6>
-                <p class="card-text">Tzannis has over 30 years of experience. He is one of Togas’ primary curators and many designs are influenced by his approach. He believes that quality and attention to detail are crucial for building a luxury brand.</p>
-            </div>
-        </div>
-        <!--/.Card-->		
+	
 		
         <!--Card-->
         <!--Card image-->
