--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 </head>
 
 <body>
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-PSZKS4"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PSZKS4');</script>
+	 
 <header id="top-slider" class="mb-5">
 
     <div class="header-block">
@@ -1678,7 +1686,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Elena<br>Jeffrey</h5>
                 <h6 class="subscript-center pb-3">Director of the Togas Research and Development Office</h6>
-                <p class="card-text">Elena is responsible for the production outcome at Togas. Meeting diverse people, dealing with creative projects while building relationships based on talent and personal ethics are the essence of her work.</p>
+                <p class="card-text">Elena is responsible for the production outcome at Togas. Dealing with creative projects while building relationships based on talent and personal ethics are the essence of her work.</p>
             </div>
         </div>
         <!--/.Card-->
