--- a/index_rus.html
+++ b/index_rus.html
@@ -295,7 +295,7 @@
             <img src="img/img-togas-lp3/create.png" alt="Create the home of your dreams" class="img-fluid d-none d-md-block pl-md-4 ">
         </div>
         <div class="py-md-5 pl-sm-0 pl-md-4 mt-lg-4">
-            <p class="text-left txt-under">Талантливые дизайнеры студии Togas Couture Interiors преобразят ваш дом, оформив его роскошным текстилем. Используя эксклюзивную коллекцию тканей, искусные мастера создадут продуманный до мельчайших деталей, гармоничный интерьерный образ, подчеркнув ваш уникальный стиль, неповторимую индивидуальность вашей личности.</p>
+            <p class="text-left txt-under">Талантливые дизайнеры студии Togas Couture Interiors преобразят ваш дом, оформив его роскошным текстилем. Используя эксклюзивную коллекцию тканей, искусные мастера создадут продуманный до мельчайших деталей, гармоничный интерьерный образ, подчеркнут ваш уникальный стиль, неповторимую индивидуальность вашей личности.</p>
         </div>
             
     </div>
