switch to local css

--- a/index_rus.html
+++ b/index_rus.html
@@ -22,7 +22,7 @@
     <link href="https://media.togas.com/media/couture/css/style-togas-lp-v2.css" rel="stylesheet">
 
     <!-- Your custom styles (optional) -->
-    <link href="https://media.togas.com/media/couture/css/styles_rus.css?v=1" rel="stylesheet">
+    <link href="css/styles_rus.css?v=1" rel="stylesheet">
 
 	<!-- fotorama.css & fotorama.js. -->
 <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
