--- a/index_rus.html
+++ b/index_rus.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Togas provides a large range of made to measure curtains and bedspreads. Our designers will guide you through the interior design process.">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Custom Made services and products - Togas</title>
+    <title>Togas Couture Interiors - Пошив на заказ: шторы, покрывала, обивка мебели, аксессуары. Каталог эксклюзивных тканей, карнизов. - Togas</title>
+	<meta name="description" content="Текстильный дизайн и пошив на заказ в студии Togas Couture Interiors. Прекрасный каталог тканей позволит декорировать любой интерьер. Изысканные материалы, дизайн и пошив штор и покрывал, широкий ассортимент карнизов и аксессуаров." />
+	<meta name="keywords" content="Пошив на заказ" />
+	<meta name="robots" content="INDEX,FOLLOW" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -68,15 +70,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="row-header mb-2 text-center justify-content-between">
 
             <div class="third-col align-self-center order-2 order-lg-0">
-                <button type="button" class="btn btn-outline-bronze" data-toggle="modal" data-target="#modalContactForm">call us: 1 212 300 2876</button>
+                <button type="button" class="btn btn-outline-bronze" data-toggle="modal" data-target="#modalContactForm">Звоните: 8-800-555-87-80</button>
             </div>
                     
              <div class="third-col">
-               <h3 class="sub-title-custom my-2">custom-made</h3>
+               <h3 class="sub-title-custom my-2">Пошив на Заказ</h3>
             </div>
 
             <div class="third-col align-self-center">
-                <button type="button" class="btn btn-outline-bronze btn-fill" data-toggle="modal" data-target="#modalContactForm">book an appointment</button>
+                <button type="button" class="btn btn-outline-bronze btn-fill" data-toggle="modal" data-target="#modalContactForm">Связаться с дизайнером</button>
                 </div>
             </div>
         </div>
@@ -93,29 +95,29 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto nav-togas">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#custom-made-services">services</a>
+                        <a class="nav-link" href="#custom-made-services">Услуги</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#products-section">products</a>
+                        <a class="nav-link" href="#products-section">Ткани и Аксессуары</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#vendors">vendors</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#experts">experts</a>
+                        <a class="nav-link" href="#vendors">Бренды</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact-info">contact info</a>
+                        <a class="nav-link" href="#experts">Эксперты</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#about-us">about us</a>
+                        <a class="nav-link" href="#contact-info">Контакты</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about-us">О компании</a>
                     </li>
                        
                     <li class="nav-item">
-                        <a class="nav-link" href="#bed-and-bath">bed and bath</a>
+                        <a class="nav-link" href="#bed-and-bath">Текстиль для спальни</a>
                     </li>
                 </ul>
             </div>
