--- a/index_rus.html
+++ b/index_rus.html
@@ -1130,8 +1130,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="container py-5">	
 		<!-- Row2 ::catalog-download -->
 		<div class="row">
-			<div class = "col-xs-12 col-sm-12 col-md-8 d-flex justify-content-center "><h3 class = "txt-catalog">Discover the Custom-Made 2018 Togas Collection</h3></div>
-			<div class = "col-xs-12 col-sm-12 col-md-4 d-flex justify-content-center " ><button type = "button" class = "btn btn-fill-bronze waves-effect waves-light catalog-button" onclick = "window.open('https://media.togas.com/media/wysiwyg/couture/COUTURE_INTERNATIONAL_2018_web.pdf')">Download Catalogue</div>
+			<div class = "col-xs-12 col-sm-12 col-md-8 d-flex justify-content-center "><h3 class = "txt-catalog">Новый каталог Togas Couture Interiors для вашего вдохновения</h3></div>
+			<div class = "col-xs-12 col-sm-12 col-md-4 d-flex justify-content-center " ><button type = "button" class = "btn btn-fill-bronze waves-effect waves-light catalog-button" onclick = "window.open('https://media.togas.com/media/wysiwyg/couture/COUTURE_INTERNATIONAL_2018_web.pdf')">Скачать каталог</div>
 		</div>
 		<!-- row -->
 	</div>
