--- a/index_rus.html
+++ b/index_rus.html
@@ -203,8 +203,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 <div class="modal-dialog modal-callyou" role="document">
     <div class="modal-content modal-bg pb-5">
-        <div class="modal-header-togas-top text-center mb-4">
-            <h4 class="modal-title-top">Talk with our expert on <span style="white-space: nowrap;">+1 212 300 2876</span></h4>
+        <div class="modal-header-togas-top text-center mb-4">
+            <h4 class="modal-title-top">Свяжитесь с нашими экспертами: <span style="white-space: nowrap;">8-800-555-87-80</span></h4>
 			
 			<button type="button" class="close mr-3 mt-1" data-toggle="collapse" data-target="#modalContactForm" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
@@ -214,24 +214,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
         <div class="modal-body mx-5">
             <div class="txt-pre mb-3">
-                <p class="txt-inner">- Or </br>Let us call you back!</p>
+                <p class="txt-inner">- или </br>Отавьте заявку и мы вам перезвоним!</p>
             </div>
 
         <!-- FORM -->
         <form name = "callback" method = "post">
 			<div class="ajax-wrapper" id="ajax-wrapper"></div>
 			<div id = "valid"></div>
-			<div id = "fail">Something is wrong. Please, check information in the form.</div>	
+			<div id = "fail">Ошибка. Пожалуйста, проверьте введенные данные.</div>	
             <!-- Input text -->
             <div class="md-form">
                 <input type="text" id="form34" name="firstname" class="form-control validate">
-                <label class="txt-inner" data-error="wrong" data-success="right" for="form34">Name Surname: </label>
+                <label class="txt-inner" data-error="wrong" data-success="right" for="form34">Имя, фамилия: </label>
             </div>
 
             <!-- Input phone -->
             <div class="md-form">
                 <input type="tel" id="form32" name="phone" class="form-control validate">
-                <label class="txt-inner" data-error="wrong" data-success="right" for="form32">Phone: </label>
+                <label class="txt-inner" data-error="wrong" data-success="right" for="form32">Телефон: </label>
             </div>
             
             <!-- Input email -->
@@ -243,37 +243,37 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<input type="text" value = "hBouW9el5zSYrsN1E4q9" name = "key">                    
 			</div>
             <div class="txt-pre mt-4">
-                <p><span class="txt-inner">Best time to contact you</span></p>
+                <p><span class="txt-inner">Когда с вами связаться</span></p>
             </div>
 
             <!--Radio group-->
             <div class="d-flex flex-row justify-content-start align-items-end time-select">
                 <div class="form-check">
-                    <input class="form-check-input" name="group100" value = "now" type="radio" id="radio100">
-                    <label class="form-check-label txt-inner" for="radio100">Now</label>
+                    <input class="form-check-input" name="group100" value = "сейчас" type="radio" id="radio100">
+                    <label class="form-check-label txt-inner" for="radio100">Сейчас</label>
                 </div>
 
 
                 <div class="form-check">
-                    <input class="form-check-input" name="group100" value = "morning" type="radio" id="radio101" checked>
-                    <label class="form-check-label txt-inner" for="radio101">Morning</label>
+                    <input class="form-check-input" name="group100" value = "утром" type="radio" id="radio101" checked>
+                    <label class="form-check-label txt-inner" for="radio101">Утром</label>
                 </div>
 
                 <div class="form-check">
-                    <input class="form-check-input" name="group100" value = "afternoon" type="radio" id="radio102">
-                    <label class="form-check-label txt-inner" for="radio102">Afternoon</label>
+                    <input class="form-check-input" name="group100" value = "днем" type="radio" id="radio102">
+                    <label class="form-check-label txt-inner" for="radio102">Днем</label>
                 </div>
 
                 <div class="form-check">
-                    <input class="form-check-input" name="group100" value = "evening" type="radio" id="radio103">
-                    <label class="form-check-label txt-inner" for="radio103">Evening</label>
+                    <input class="form-check-input" name="group100" value = "вечером" type="radio" id="radio103">
+                    <label class="form-check-label txt-inner" for="radio103">Вечером</label>
                 </div>
             </div>
             <!--Radio group-->
 
             <!--Button SEND-->
             <div class="modal-footer-togas d-flex justify-content-center">
-                <button id ="callback-submit" type="submit" name="submit" class="btn btn-outline-bronze-color my-4">Send</button>
+                <button id ="callback-submit" type="submit" name="submit" class="btn btn-outline-bronze-color my-4">Отправить</button>
             </div>
         </form>
 
