--- a/index_rus.html
+++ b/index_rus.html
@@ -299,8 +299,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <h6 class="subscript-one pt-4 pb-2">EXCELLENCE IN CUSTOM SERVICE&nbsp;&nbsp;<span><img src="https://media.togas.com/media/couture/img/img-togas-lp3/line-02-right-09.svg" width="150" alt=""></span></h6>
                 <img src="https://media.togas.com/media/couture/img/img-togas-lp3/create2.jpg" alt="Custom-made" class="img-fluid d-block d-md-none w-50 my-4 float-left float-md-none pr-3 pr-sm-5">
                 <p class="text-justify txt-p py-4">Студия Togas Couture Interiors предлагает индивидуальное оформление интерьеров текстилем премиального уровня: роскошные портьеры и тюли для декорирования окон, прекрасные обивочные ткани, мягкие изголовья по индивидуальным заказам и многое другое. Мы активно сотрудничаем с профессионалами в сфере интерьерного дизайна: архитектурными бюро, дизайнерами и декораторами, поставляем высококачественный текстиль в отели, гостиницы и рестораны.</p> 
-                <p class="text-justify txt-p pb-4">Благодаря коллекции эксклюзивных тканей и роскошных аксессуаров для дома от ведущих европейских предприятий, изготовленных с применением тонкой ручной работы, дизайнеры Togas Couture Interiors предлагают лучшие креативные решения по декорированию вашего дома текстилем. Все модели, создаваемые нашими мастерами, словно произведения искусства, наполненные гармонией и совершенством каждого штриха, такие же уникальные, как и вы. Роскошь, безупречный стиль и высочайшее качество изделий от Togas – результат сочетания профессионального подхода и авторской коллекции тканей и аксессуаров. </p> 
-                <p class="text-justify txt-p pb-4">Наша задача – не просто оформить интерьер текстилем, но воплотить в жизнь ваше видение красоты и утонченности, отразить вашу индивидуальность, создать для вас неповторимое пространство для жизни. Мы поможем создать интерьер вашей мечты!</p>
+                <p class="text-justify txt-p pb-4">Благодаря коллекции эксклюзивных тканей и роскошных аксессуаров для дома от ведущих европейских предприятий, изготовленных с применением тонкой ручной работы, дизайнеры Togas Couture Interiors имеют практически безграничные возможности для творческого самовыражения и предлагают лучшие креативные решения по декорированию вашего дома текстилем. Все модели, создаваемые нашими мастерами, словно произведения искусства, наполненные гармонией и совершенством каждого штриха, такие же уникальные, как и вы. Роскошь, безупречный стиль и высочайшее качество изделий от Togas – результат сочетания профессионального подхода и авторской коллекции тканей и аксессуаров.</p> 
+                <p class="text-justify txt-p pb-4">Наша задача – не просто оформить интерьер текстилем, но воплотить в жизнь ваше видение красоты и утонченности, создать ваш собственный стиль и отразить вашу индивидуальность, создать для вас неповторимое пространство для жизни. Мы поможем создать интерьер вашей мечты!</p>
         </div>
         <div class="col-md-4 d-flex flex-column align-items-end mt-5 pl-5 pl-sm-3">
         <div class="view zoom">
@@ -2195,7 +2195,7 @@ function sendMessage() {
     };
     $.ajax({
         type: 'post', 
-        url:  'sender.php',
+        url:  'sender_rus.php',
         data:  formData,
         dataType: 'json',
 		beforeSend: function() {$('#ajax-wrapper').html('<img src="https://media.togas.com/media/couture/img/img-togas-lp3/ajax-loader.gif" id="loading-indicator">');$('#callback-submit').prop( "disabled", true );},
