--- a/index_rus.html
+++ b/index_rus.html
@@ -1802,7 +1802,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 mt-4">
-                    <p class="text-center card-text mb-5">We stand high in the global textile industry providing an outstanding custom-made service in 140 stores worldwide. We now operate three exclusive boutiques in the US, one in Greenwich CT, one in Manhattan NY and another one in Roosevelt Field Mall. Visit the stores, discover our premium service and get the chance to see in close our highest quality standards delivered with love, care and passion. Togas boutiques are a unique holistic experience that will help you get closer to your dream.</p>
+                    <p class="text-center card-text mb-5">Откройте для себя ткани премиум-класса и высочайший уровень сервиса! Togas Couture Interiors предоставляет услуги по текстильному декору интерьеров в 140 дизайн-студиях по всему миру: в Европе, Азии и США. Более 100 бутиков Togas в России дают нашим клиентам в разных регионах страны возможность открыть для себя мир прекрасных тканей от Togas, создаваемых с любовью и вдохновением, и разнообразие дизайн-решений по оформлению интерьеров эксклюзивным текстилем. Мы поможем вам воплотить в жизнь ваши мечты!</p>
                 </div>
             </div>
 		</div>
