--- a/index_rus.html
+++ b/index_rus.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -203,7 +203,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 <div class="modal-dialog modal-callyou" role="document">
     <div class="modal-content modal-bg pb-5">
-        <div class="modal-header-togas-top text-center mb-4">
+        <div class="modal-header-togas-top text-center mb-4">
             <h4 class="modal-title-top">Свяжитесь с нашими экспертами: <span style="white-space: nowrap;">8-800-555-87-80</span></h4>
 			
 			<button type="button" class="close mr-3 mt-1" data-toggle="collapse" data-target="#modalContactForm" data-dismiss="modal" aria-label="Close">
@@ -326,7 +326,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="col-sm-12 mt-5 mb-4">
         <h2 class="subscript-center">
             <img src="https://media.togas.com/media/couture/img/img-togas-lp3/line-02-left-08.svg" alt="" class="decor-line d-none d-sm-inline-block">
-            <span class="px-2">services</span>
+            <span class="px-2">Услуги</span>
           <img src="https://media.togas.com/media/couture/img/img-togas-lp3/line-02-right-09.svg" alt="" class="decor-line d-none d-sm-inline-block">
             </h2>      
          </div>
@@ -1794,7 +1794,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="col-sm-12 mt-5">
                 <h2 class="subscript-center">
                     <img src="img/img-togas-lp3/line-02-left-08.svg" alt="" class="decor-line d-none d-sm-inline-block">
-                    <span class="px-2">Адреса салонов</span>
+                    <span class="px-2">Наши бутики</span>
                   <img src="img/img-togas-lp3/line-02-right-09.svg" alt="" class="decor-line d-none d-sm-inline-block">
                     </h2>      
                  </div>
@@ -1802,7 +1802,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 mt-4">
-                    <p class="text-center card-text mb-5">We stand high in the global textile industry providing an outstanding custom-made service in 140 stores worldwide. We now operate three exclusive boutiques in the US, one in Greenwich CT, one in Manhattan NY and another one in Roosevelt Field Mall. Visit the stores, discover our premium service and get the chance to see in close our highest quality standards delivered with love, care and passion. Togas boutiques are a unique holistic experience that will help you get closer to your dream.</p>
+                    <p class="text-center card-text mb-5">Откройте для себя ткани премиум-класса и высочайший уровень сервиса! Togas Couture Interiors предоставляет услуги по текстильному декору интерьеров в 140 дизайн-студиях по всему миру: в Европе, Азии и США. Более 100 бутиков Togas в России дают нашим клиентам в разных регионах страны возможность использовать разнообразные дизайн-решения по оформлению интерьеров эксклюзивным текстилем.<br />Мы поможем воплотить в жизнь ваши мечты!</p>
                 </div>
             </div>
 		</div>
@@ -1839,7 +1839,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="d-flex flex-column align-items-center">
 
                 <div class="d-flex align-items-center pb-4">
-                    <button type="button" class="btn btn-outline-bronze-cm" data-toggle="modal" data-target="#modalContactForm">Call an expert</button>
+                    <button type="button" class="btn btn-outline-bronze-cm" data-toggle="modal" data-target="#modalContactForm">Пригласить дизайнера</button>
                 </div>
 
                 <div class="d-flex align-items-center pb-4">
@@ -1954,7 +1954,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <div class="col-sm-12 mt-3">
                     <h2 class="subscript-center">
                         <img src="https://media.togas.com/media/couture/img/img-togas-lp3/line-02-left-08.svg" alt="" class="decor-line d-none d-sm-inline-block">
-                        <span class="px-2">REFINED TASTE</span>
+                        <span class="px-2">Изысканность и утонченный вкус</span>
                       <img src="https://media.togas.com/media/couture/img/img-togas-lp3/line-02-right-09.svg" alt="" class="decor-line d-none d-sm-inline-block">
                         </h2>      
                      </div>
