--- a/index_rus.html
+++ b/index_rus.html
@@ -302,7 +302,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <p class="text-justify txt-p pb-4">Благодаря коллекции эксклюзивных тканей и роскошных аксессуаров для дома от ведущих европейских предприятий, изготовленных с применением тонкой ручной работы, дизайнеры Togas Couture Interiors имеют практически безграничные возможности для творческого самовыражения и предлагают лучшие креативные решения по декорированию вашего дома текстилем. Все модели, создаваемые нашими мастерами, словно произведения искусства, наполненные гармонией и совершенством каждого штриха, такие же уникальные, как и вы. Роскошь, безупречный стиль и высочайшее качество изделий от Togas – результат сочетания профессионального подхода и авторской коллекции тканей и аксессуаров.</p> 
                 <p class="text-justify txt-p pb-4">Наша задача – не просто оформить интерьер текстилем, но воплотить в жизнь ваше видение красоты и утонченности, создать ваш собственный стиль и отразить вашу индивидуальность, создать для вас неповторимое пространство для жизни. Мы поможем создать интерьер вашей мечты!</p>
         </div>
-        <div class="col-md-4 d-flex flex-column align-items-end mt-5 pl-5 pl-sm-3">
+        <div class="col-md-4 flex-column align-items-end mt-5 pl-5 pl-sm-3">
         <div class="view zoom">
             <img src="https://media.togas.com/media/couture/img/img-togas-lp3/create.png" alt="Create the home of your dreams" class="img-fluid d-none d-md-block pl-md-4 ">
         </div>
@@ -583,9 +583,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <!-- / container for mobile collapseDraps-->
 		</div>
         <!-- / mobile collapseDraps -->  		
-		
+		</div>
+		<div class="row d-flex justify-content-center mx-auto">
+		<div class="col-sm-12">		
         <!-- Desktop collapseShades -->
-        <div class="container-collapse mb-5 mt-2">
+        <div class="container-collapse mt-2">
         <div class="row">
             <div class="col">
                 <div id="#bind2" class="bind-absolute"></div>
@@ -637,9 +639,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <!-- / container for desktop collapseShades-->
         <!-- / Desktop collapseShades -->
-
+		</div>
+		<div class="col-sm-12">
 		<!-- Desktop collapseUpholstery -->   
-        <div class="container-collapse mb-5 mt-2">
+        <div class="container-collapse mt-2">
         <div class="row">
         <div class="col">
 
@@ -685,9 +688,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <!-- / container for desktop collapseUpholstery-->
         <!-- / Desktop collapseUpholstery -->
-
+		</div>
+		<div class="col-sm-12">
 		<!-- Desktop collapseDraps -->
-        <div class="container-collapse mb-5 mt-2">
+        <div class="container-collapse mt-2">
         <div class="row">
         <div class="col">
 
@@ -732,6 +736,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <!-- / container for desktop collapseDraps-->
         <!-- / Desktop collapseDraps -->
         </div>
+		</div>
         <!-- /row1 -->
 
 
@@ -977,12 +982,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <!-- / container for mobile collapseDraps-->
 		</div>
         <!-- / mobile collapseB2b -->    
-                
-
- 
-
+         </div>
+        <div class="row d-flex justify-content-center mx-auto">                   
+		<div class="col-sm-12">
 		<!-- Desktop collapseHeadboards -->
-        <div class="container-collapse mb-5 mt-2">
+        <div class="container-collapse mt-2">
         <div class="row">
         <div class="col">
 
@@ -1025,10 +1029,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <!-- / container for desktop collapseHeadboards-->
         <!-- / Desktop collapseHeadboards -->		
-
-
+		</div>
+		<div class="col-sm-12">
 		<!-- Desktop collapseInHouseDesigners -->
-        <div class="container-collapse mb-5 mt-2">
+        <div class="container-collapse mt-2">
         <div class="row">
         <div class="col">
 
@@ -1074,9 +1078,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <!-- / container for desktop collapseInHouseDesigners-->
         <!-- / Desktop collapseInHouseDesigners -->			
-		
+		</div>
+		<div class="col-sm-12">		
 		<!-- Desktop collapseB2b -->
-        <div class="container-collapse mb-5 mt-2">
+        <div class="container-collapse mt-2">
         <div class="row">
         <div class="col">
 
@@ -1121,6 +1126,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <!-- / container for desktop collapseB2b-->
         <!-- / Desktop collapseB2b -->
         </div>
+		</div>
 	</div>
 	</div>
 
@@ -1415,9 +1421,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <!-- / container for desktop collapseAccessories-->
 		</div>
         <!-- / mobile collapseAccessories -->	
-
+		</div>
+        <div class="row d-flex justify-content-center mx-auto">
+		<div class="col-sm-12">		
         <!-- Desktop collapseFabrics -->
-        <div class="container-collapse mb-5 mt-2">
+        <div class="container-collapse mt-2">
         <div class="row">
             <div class="col">
                 <div id="#bind1" class="bind-absolute"></div>
@@ -1476,9 +1484,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <!-- / container for desktop collapseFabrics-->
         <!-- / Desktop collapseFabrics -->
-
+		</div>
+		<div class="col-sm-12">
 		<!-- Desktop collapseHardware -->
-        <div class="container-collapse mb-5 mt-2">
+        <div class="container-collapse mt-2">
         <div class="row">
         <div class="col">
 
@@ -1522,9 +1531,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <!-- / container for desktop collapseHardware-->
         <!-- / Desktop collapseHardware -->
-
+		</div>
+		<div class="col-sm-12">
 		<!-- Desktop collapseAccessories -->
-        <div class="container-collapse mb-5 mt-2">
+        <div class="container-collapse mt-2">
         <div class="row">
         <div class="col">
 
@@ -1570,7 +1580,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <!-- / container for desktop collapseAccessories-->
         <!-- / Desktop collapseAccessories -->	
-		
+		</div>
         </div>
         </div>
         <!-- Container -->
